# Multi-Agent-AI-Development-Framework-Extended-Genius-Edition

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_RELEASE_BODY.md  GITHUB_RELEASE_BODY_v1.0.0.md  LICENSE  NOTICE  POST_RELEASE_CHECKLIST.md  PRE_FLIGHT_CHECKLIST.md  README.md  RELEASE_COMMANDS.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  cli.py  codecov.yml  coverage.xml  mypy.ini  pyproject.toml  requirements.txt  run_demo.py  run_parallel_demo.py  v1.0_ROADMAP.md
.github/: CODEOWNERS  ISSUES_v1.0.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
config/: presets.yaml
docs/: ANNOUNCEMENT_v1.0.0.md  ARCHITECTURE.md  BACKFILL_TEST_PLAN.md  BUILD_WHEELS.md  CHATGPT_COLLABORATION_GUIDE.md  CHATGPT_INSTRUCTIONS.txt  CI_SECRETS.md  CLI_USAGE.md  COMMIT_MESSAGES.md  COMMIT_MESSAGES_READY.md  COMPLIANCE_CHECK.md  CONFIG.md  DEFINITION_OF_DONE_v1.0.md  DEVELOPMENT_REQUIREMENTS.md  FILES_ANALYSIS.md  FINAL_DELTA_CHECKLIST.md  FINAL_VERIFICATION.md  FINISH_LINE.md  FIRST_RELEASE_GUIDE.md  GITHUB_AUTH_FIX.md  GITHUB_AUTH_SETUP.md  GITHUB_PROTECTION_SETUP.md  GITHUB_PUSH_COMMANDS.md  GITHUB_RELEASE_SHORT_v1.0.0.md  GITHUB_SETUP.md  GO_COMMANDS.md  GO_LIVE_GUIDE.md  HOOKS_AND_PRE_COMMIT.md  IDEA_TO_ZIP_GUIDE.md  INDEX.md  KNOWN_ISSUES.md  PARALLEL_EXECUTION.md  PLUGIN_API.md  PLUGIN_TEMPLATE.md  POST_RELEASE_MONITORING.md  PRE_RELEASE_CHECKLIST.md  PRE_RELEASE_SANITY.md  PRODUCTION_DEMO_CHECKLIST.md  PUSH_INSTRUCTIONS.md  (+34 more)
(+175 files in other folders)
