[project]
name = "multi-agent-system"
version = "1.0.1-dev"
description = "Multi-agent AI development framework"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0,<8.0",
    "pydantic>=2.0.0,<3.0.0",
    "Jinja2>=3.0.0,<4.0.0",
    "graphviz>=0.20.0,<1.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0,<2.0.0",
]

[project.scripts]
multiagent = "cli:main"
multiagent-clean = "scripts.clean_artifacts:main"
multiagent-new = "scripts.multiagent_new:main"

# Plugin API entry points (for v1.1+)
# Third-party packages can register agents/advisors using these entry points
[project.entry-points."multiagent.agents"]
# Example:
# my_org.StaticLinterX = "my_pkg.agents.static_linter_x:StaticLinterX"

[project.entry-points."multiagent.advisors"]
# Example:
# my_org.SecReviewX = "my_pkg.advisors.sec_review_x:SecReviewX"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py38"
line-length = 100
lint.select = ["E", "F", "I", "B", "UP", "N", "S", "W", "RUF"]
lint.ignore = ["E203", "E266"]
exclude = ["venv", ".venv", "dist", "build", "__pycache__", ".git"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
